--- a/frontend/src/app/ingredient/components/tmpl-form.component.html
+++ b/frontend/src/app/ingredient/components/tmpl-form.component.html
@@ -1,5 +1,5 @@
 
-<button class="btn btn-back btn-submit" (click)="VM.cancel()"><i class="pi pi-arrow-left"></i></button>
+<button class="btn btn-back btn-submit" (click)="VM.cancel()"><i class="hb hb-arrow-left"></i></button>
 <section class="login">
   <article class="card-login ">
     <form #miForm="ngForm" class="form" action="#">
